tests/golden/reject/rejconstpkg/rejconstpkg.go
package rejconstpkg

const K = 300
